# nascode

./: .gitignore  ARCHITECTURE.md  BUILD_SUCCESS.md  BUILD_SUMMARY.md  CMakeLists.txt  CODE_EDITOR_COMPLETION.md  COMPLETED_WORK.md  I18N_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  TEST_TREE_POU.md  build.sh  check_editor.sh  check_i18n.sh  check_project.sh  demo_i18n.sh  run_nascode.sh  test_build.sh  update_translations.sh
docs/: BUGFIX_NEW_PROJECT.md  CODE_EDITOR_FEATURES.md  FRAMEWORK_SUMMARY.md  I18N_GUIDE.md  I18N_IMPLEMENTATION.md  PLUGIN_DEVELOPMENT.md  PROJECT_MANAGEMENT.md  PROJECT_MANAGEMENT_IMPLEMENTATION.md  PROJECT_MANAGEMENT_QUICKSTART.md  UI_INTEGRATION.md  USER_GUIDE.md
examples/: CMakeLists.txt  Main.st  example_project.nsp  test_pou_serialization.cpp
src/: main.cpp
src/app/: CMakeLists.txt
src/communication/: CMakeLists.txt
src/communication/serial/: CMakeLists.txt
src/communication/tcp/: CMakeLists.txt
src/compiler/: CMakeLists.txt
src/compiler/codegen/: CMakeLists.txt
src/compiler/lexer/: CMakeLists.txt
src/compiler/parser/: CMakeLists.txt
src/controllers/: CMakeLists.txt  ProjectController.cpp  ProjectController.h
src/core/: Application.cpp  Application.h  CMakeLists.txt  EventBus.cpp  EventBus.h  I18nManager.cpp  I18nManager.h  IPlugin.h  PluginManager.cpp  PluginManager.h
src/models/: CMakeLists.txt  LibraryManager.cpp  LibraryManager.h  POU.cpp  POU.h  Project.cpp  Project.h  ProjectConfig.cpp  ProjectConfig.h  ProjectModel.cpp  ProjectModel.h
src/plugins/: CMakeLists.txt
src/views/: CMakeLists.txt  CodeCompleter.cpp  CodeCompleter.h  CodeEditor.cpp  CodeEditor.h  MainWindow.cpp  MainWindow.h  OutputPanel.cpp  OutputPanel.h
translations/: README.md  nascode_en_US.ts  nascode_zh_CN.ts
